--- a/data/gtk/window.ui
+++ b/data/gtk/window.ui
@@ -122,10 +122,13 @@
                             </child>
                             <child>
                               <object class="SwDiscoverPage" id="discover_page"/>
+                            </child>"
+                            <child>
+                              <object class="SwMapPage" id="map_page"/>
                             </child>
                             <child>
                               <object class="SwSearchPage" id="search_page"/>
-                            </child>
+                            </child>"
                           </object>
                         </child>
                       </object>
