--- a/data/gtk/discover_page.ui
+++ b/data/gtk/discover_page.ui
@@ -24,6 +24,12 @@
                       <object class="SwFeaturedCarousel" id="carousel"/>
                     </child>
                     <child>
+                      <object class="GtkButton" id="back_button">
+                        <property name="action_name">win.show-map</property>
+                        <property name="label">Open Map</property>
+                      </object>
+                    </child>
+                    <child>
                       <object class="GtkLabel">
                         <property name="label" translatable="yes">Most Voted Stations</property>
                         <property name="wrap">True</property>
